<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SpoilFoil</string>
    <string name="action_settings">Settings</string>
    <string name="action_camera">Camera</string>
    <string name="title_activity_tasti">TastiActivity</string>
    <string name="title_activity_arturo">ArturoActivity</string>
    <string name="title_activity_kelsey">KelseyActivity</string>
    <string name="title_activity_settings">Settings</string>

    <string name="header_notifications">Notifications</string>
    <string name="notification_push">Push notification</string>
    <string name="notification_push_summary">Receive notifications directly to your device</string>
    <string name="notification_email">Email notification</string>
    <string name="notification_email_summary">Receive email notifications</string>
    <string name="email_address">Email address</string>
    <string name="header_cloud">Cloud</string>
    <string name="sync_to_cloud">Sync to cloud</string>
    <string name="sync_to_cloud_summary">Sync your fridge data to the cloud for cross-device access</string>
    <string name="notification_time">Expiry reminder time</string>
    <string name="auto_sync">Sync automatically</string>
    <string name="auto_sync_summary">Any changes to your fridge will automatically be saved</string>
    
    <string name="hello_world">Hello world!</string>
    <string name="processing_image">Your image is being processed&#8230;</string>
    <string name="captured_image">Captured Image</string>
    <string name="calendar">Calendar</string>
    <string name="edit_text_new_foodItem">Enter a food item</string>
    <string name="edit_text_DaysGood">Expiry date</string>
    <string name="expired">expired</string>
    <string name="add">Add</string>
    <string name="checkout">Checkout</string>
    <string name="set_expiry">Set Expiry</string>
    <string name="empty_fridge">Your fridge is empty :(</string>
    <string name="number">5</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="week">week</string>
    <string name="weeks">weeks</string>
    <string name="month">month</string>
    <string name="months">months</string>
    <string name="year">year</string>
    <string name="years">years</string>
    <string name="enter_email">enter email address</string>
    
</resources>
